# RoBoT_Brain

./: .gitignore  .mcp.json  ARCHITECTURE.md  Cargo.toml  README.md  RoBoT_PROJECT_CONTEXT.md
.github/workflows/: build-release.yml
robot_brain_test/: Cargo.toml
robot_brain_test/src/: lib.rs  main.rs
src/: app.rs  logging.rs  main.rs  mcp_bridge.rs
src/bridge/: acp.rs  mcp.rs  mcp_client.rs  mod.rs  rmcp.rs  windows_console.rs
src/bridge/tools/: experience.rs  memory.rs  mod.rs  reflection.rs  search.rs
src/cli/: commands.rs  mod.rs  output.rs
src/cli/commands/: config.rs  experience.rs  init.rs  memory.rs  migrate.rs  server.rs  status.rs
src/database/: migrations.rs  mod.rs  models.rs  queries.rs  sqlite.rs
src/database/migrations/: 001_create_memories.sql  007_create_lineage.sql  mod.rs
src/experience/: bus.rs  coordinator.rs  encounter_recorder.rs  event_handler.rs  exploration.rs  hypothesis.rs  knowledge.rs  metrics.rs  mod.rs  observer.rs  queue.rs  reflection.rs  repository.rs  reputation.rs  scheduler.rs  scorer.rs  types.rs  worker.rs
src/experience/compression/: mod.rs  (+3 more)
src/knowledge/: mod.rs  query.rs  store.rs  types.rs
src/learning/: candidates.rs  hypothesis.rs  lineage.rs  memory_state.rs  mod.rs  promotion.rs  working_memory.rs
src/memory/: mod.rs  permanent.rs  retrieval.rs  types.rs  working.rs
src/planner/: mod.rs  planner.rs  policy.rs
src/skills/: registry.rs
src/tools/: agent.rs  experience.rs  hypothesis.rs  ingestor.rs  knowledge.rs  memory.rs  mod.rs  reflection.rs  search.rs
src/workflows/: engine.rs  mod.rs
(+59 files in other folders)
