[package]
name = "robot_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
regex = "1"
walkdir = "2"
zip = "2"
sha2 = "0.10"
lazy_static = "1"
dirs = "5"
rusqlite = { version = "0.32", features = ["load_extension"] }
zerocopy = { version = "0.7", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
